test/error/invalid_escape.htest
#!/usr/bin/env hashdot
#.name="va\ue"

